@@ -28,6 +28,7 @@ Version 1.11.11+dev:
      raising the limit for simultaneous sound effects from 5 to 21.
    * Fixed: A bug causing text boxes not properly updating.
    * Fixed: A bug causing text boxes to spuriously firing modification events.
+   * Fix bug #21758: "Ready not blocked while player pick faction."
 
 Version 1.11.11:
  * Add-ons server:
